microk8s/manifests/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:latest
        ports:
        - containerPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
  - port: 1883
    targetPort: 1883
