microk8s/manifests/openhab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhab
spec:
  rules:
  - host: openhab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openhab
            port:
              number: 8080
